@@ -121,6 +121,36 @@ public class Table implements TableOrView {
 	protected native boolean nativeIsValid(long nativeTablePtr);
 
 	/**
+	 * Add a column to the table dynamically. 
+	 * @return Index of the new column. 
+	 */
+	public long addColumn (ColumnType type, String name) {
+		return nativeAddColumn(nativePtr, type.getValue(), name);
+	}
+	
+	protected native long nativeAddColumn(long nativeTablePtr, int type, String name);
+	
+	/**
+	 * Remove a column in the table dynamically.
+	 */
+	public void removeColumn(long columnIndex)
+	{
+		nativeRemoveColumn(nativePtr, columnIndex);
+	}
+	
+	protected native void nativeRemoveColumn(long nativeTablePtr, long columnIndex);
+	
+	/**
+	 * Rename a column in the table.
+	 */
+	public void renameColumn(long columnIndex, String newName) {
+		nativeRenameColumn(nativePtr, columnIndex, newName);
+	}
+	
+	protected native void nativeRenameColumn(long nativeTablePtr, long columnIndex, String name);
+	
+	
+	/**
 	 * Updates a table specification from a Table specification structure.
 	 * Supported types - refer to @see ColumnType.
 	 * 
@@ -134,7 +164,7 @@ public class Table implements TableOrView {
 		nativeUpdateFromSpec(nativePtr, tableSpec);
 	}
 
-	protected native void nativeUpdateFromSpec(long nativePtr, TableSpec tableSpec);
+	protected native void nativeUpdateFromSpec(long nativeTablePtr, TableSpec tableSpec);
 	
 	// Table Size and deletion. AutoGenerated subclasses are nothing to do with this 
 	// class.
