@@ -11,6 +11,37 @@
 
 using namespace tightdb;
 
+JNIEXPORT jlong JNICALL Java_com_tightdb_Table_nativeAddColumn
+  (JNIEnv *env, jobject, jlong nativeTablePtr, jint colType, jstring name)
+{
+    if (!TABLE_VALID(env, TBL(nativeTablePtr))) return 0;
+    const char* nameCharPtr = env->GetStringUTFChars(name, NULL);
+    if (!nameCharPtr) 
+        return 0;
+    size_t colIndex = TBL(nativeTablePtr)->add_column(DataType(colType), nameCharPtr);
+	env->ReleaseStringUTFChars(name, nameCharPtr);
+    return colIndex;
+}
+
+JNIEXPORT void JNICALL Java_com_tightdb_Table_nativeRemoveColumn
+  (JNIEnv *env, jobject, jlong nativeTablePtr, jlong columnIndex)
+{
+    if (!COL_INDEX_VALID(env, TBL(nativeTablePtr), columnIndex)) return;
+    TBL(nativeTablePtr)->remove_column(S(columnIndex));
+}
+
+JNIEXPORT void JNICALL Java_com_tightdb_Table_nativeRenameColumn
+  (JNIEnv *env, jobject, jlong nativeTablePtr, jlong columnIndex, jstring name)
+{
+    if (!COL_INDEX_VALID(env, TBL(nativeTablePtr), columnIndex)) return;
+    const char* nameCharPtr = env->GetStringUTFChars(name, NULL);
+    if (!nameCharPtr) 
+        return;
+    TBL(nativeTablePtr)->rename_column(S(columnIndex), nameCharPtr);
+	env->ReleaseStringUTFChars(name, nameCharPtr);
+}
+
+
 
 JNIEXPORT void JNICALL Java_com_tightdb_Table_nativeUpdateFromSpec(
 	JNIEnv* env, jobject, jlong nativeTablePtr, jobject jTableSpec)
