@@ -9,22 +9,23 @@ Global
 		Debug|x64 = Debug|x64
 		Release|Win32 = Release|Win32
 		Release|x64 = Release|x64
-		Static library, debug|Win32 = Static library, debug|Win32
-		Static library, debug|x64 = Static library, debug|x64
-		Static library, release|Win32 = Static library, release|Win32
-		Static library, release|x64 = Static library, release|x64
+		Static lib, debug|Win32 = Static lib, debug|Win32
+		Static lib, debug|x64 = Static lib, debug|x64
+		Static lib, release|Win32 = Static lib, release|Win32
+		Static lib, release|x64 = Static lib, release|x64
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Debug|Win32.ActiveCfg = Debug|Win32
-		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Debug|x64.ActiveCfg = Debug|x64
+		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Debug|Win32.ActiveCfg = Release|x64
+		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Debug|x64.ActiveCfg = Release|x64
+		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Debug|x64.Build.0 = Release|x64
 		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Release|Win32.ActiveCfg = Release|Win32
 		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Release|x64.ActiveCfg = Release|x64
-		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Static library, debug|Win32.ActiveCfg = Debug|Win32
-		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Static library, debug|x64.ActiveCfg = Debug|x64
-		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Static library, debug|x64.Build.0 = Debug|x64
-		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Static library, release|Win32.ActiveCfg = Release|Win32
-		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Static library, release|x64.ActiveCfg = Release|x64
-		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Static library, release|x64.Build.0 = Release|x64
+		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Static lib, debug|Win32.ActiveCfg = Release|x64
+		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Static lib, debug|x64.ActiveCfg = Release|x64
+		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Static lib, debug|x64.Build.0 = Release|x64
+		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Static lib, release|Win32.ActiveCfg = Release|Win32
+		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Static lib, release|x64.ActiveCfg = Release|x64
+		{88BB7EE5-308E-4A8B-F4AD-9A6843CA4AF6}.Static lib, release|x64.Build.0 = Release|x64
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
